--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.tectonica</groupId>
 	<artifactId>tectonica-kvs</artifactId>
-	<version>0.6.0</version>
+	<version>0.6.1</version>
 
 	<name>Tectonica Commons</name>
 	<description>Simple yet powerful facade for Key-Value store engine, capable of supporting many underlying data-stores</description>
@@ -45,7 +45,7 @@
 	</properties>
 
 	<dependencies>
-	
+
 		<!-- Logging -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -57,7 +57,7 @@
 		<dependency>
 			<groupId>com.tectonica</groupId>
 			<artifactId>tectonica-commons</artifactId>
-			<version>0.6.0</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<!-- Google App Engine -->
@@ -91,6 +91,12 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-jdk14</artifactId>
+			<version>${version.slf4j}</version>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- GAE Testing -->
 		<dependency>
@@ -111,7 +117,7 @@
 			<version>${version.appengine}</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 	</dependencies>
 
 	<build>
